fix(): horizontal scroll fixed the right way

--- a/components/PageLayout/PageLayout.module.scss
+++ b/components/PageLayout/PageLayout.module.scss
@@ -5,5 +5,5 @@
 }
 
 .mainContent {
-  width: 100vw;
+  width: 100%;
 }
