--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,7 +20,6 @@ body {
   font-family: var(--body-font);
   background-color: var(--background-color);
   color: var(--font-color);
-  overflow-x: hidden;
 }
 
 a {
